feat: secure API connectivity

--- a/mobile/TrainingPlan/Info.plist
+++ b/mobile/TrainingPlan/Info.plist
@@ -14,13 +14,21 @@
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
+        <key>NSAppTransportSecurity</key>
+        <dict>
+        <key>NSExceptionDomains</key>
+        <dict>
+                <key>localhost</key>
+                <dict>
+                        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+                        <true/>
+                        <key>NSIncludesSubdomains</key>
+                        <true/>
+                </dict>
+        </dict>
         <key>NSAllowsLocalNetworking</key>
         <true/>
-	</dict>
+        </dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>MADEOkineSansPERSONALUSE-Black.otf</string>
