--- a/mobile/TrainingPlan/Resources/APIConfig.plist.example
+++ b/mobile/TrainingPlan/Resources/APIConfig.plist.example
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
     <key>API_BASE_URL</key>
-    <string>http://localhost:8000</string>
+    <string>https://localhost:8000</string>
 </dict>
 </plist>
