--- a/mobile/TrainingPlan/Info.plist
+++ b/mobile/TrainingPlan/Info.plist
@@ -9,27 +9,36 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>“This app needs to connect to the local development server.”</string>
+	<string>This app needs to connect to the local development server.</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-        <key>NSAppTransportSecurity</key>
-        <dict>
-                <key>NSAllowsLocalNetworking</key>
-                <true/>
-                <key>NSExceptionDomains</key>
-                <dict>
-                        <key>100.113.243.28</key>
-                        <dict>
-                                <key>NSIncludesSubdomains</key>
-                                <true/>
-                                <key>NSExceptionAllowsInsecureHTTPLoads</key>
-                                <true/>
-                        </dict>
-                </dict>
-        </dict>
-        <key>UIAppFonts</key>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>100.113.243.28</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+			<key>100.75.227.59</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+	<key>UIAppFonts</key>
 	<array>
 		<string>MADEOkineSansPERSONALUSE-Black.otf</string>
 		<string>MADEOkineSansPERSONALUSE-Medium.otf</string>
