--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# Ignore sensitive files
-backend/src/utils/SQLutils/config.py
-
 # Ignore Python cache files
 __pycache__/
 *.pyc
+
+# Environment variables and virtual environments
+.env
+.venv/
 .pytest_cache/
 
 # Ignore vscode files
