--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SECRET_KEY=key_for_encryption
-DB_USERNAME=your_db_username
-DB_PASSWORD=your_db_password
+SECRET_KEY=secret_key
+DB_USERNAME=db_username
+DB_PASSWORD=db_password
 DB_HOST=localhost
